# AgentVsAgent

./: .gitignore  README.md  package-lock.json  package.json
agents/c/: Makefile
agents/c/src/: main.c  parser.c  parser.h  prompt.c  prompt.h  registry.c  registry.h  state.c  state.h  utils.h
agents/c/src/tools/: analyze_code.c  execute_command.c  list_directory.c  (+4 more)
agents/go/: go.mod
agents/javascript/: package.json
agents/javascript/src/: api-client.ts  index.ts  parser.ts  prompt.ts  registry.ts  state.ts
agents/python/: pyproject.toml
agents/python/src/: main.py  parser.py  prompt.py  registry.py  state.py
agents/rust/: Cargo.toml
agents/rust/src/: api_client.rs  main.rs  tool_router.rs  types.rs
agents/rust/src/tools/: analyze_code.rs  execute_command.rs  list_directory.rs  mod.rs  read_file.rs  search_files.rs  write_file.rs
agents/spec/: agent-interface.md  system-prompt.txt  tools-schema.json
benchmark/: package.json
benchmark/src/: report-generator.ts  runner.ts  scorer.ts
docs/: adding-a-language.md  architecture.md  getting-started.md  tool-specification.md
golden-transcript/: generate-transcript.js  schema.json  transcript.json
mock-api/: package.json
mock-api/src/: config.ts  index.ts  types.ts
mock-api/src/routes/: chat-completions.ts
mock-api/src/transcript/: loader.ts  session-manager.ts
target-project/: manifest.json
target-project/generator/: package.json
target-project/generator/src/: bug-injector.ts  config-generator.ts  file-generator.ts  index.ts  log-generator.ts  manifest-writer.ts  seeded-random.ts
(+23 files in other folders)
