[package]
name = "agent-rust"
version = "1.0.0"
edition = "2021"
description = "Rust agent implementation for Agent vs Agent benchmark"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
regex = "1"
glob = "0.3"
ignore = "0.4"

[profile.release]
opt-level = 3
lto = true
